--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   </header>
 
   <main id="content">
-    <section class="imagem">
-      <img id="minha_foto" src="./img1.jpg" alt="">
-    </section>
     <section>
       <section class="container">
+        <section class="imagem">
+          <img id="minha_foto" src="./img1.jpg" alt="">
+        </section>
 
         <section class="container-aprendizados">
 
-            <section class="lado-esquerdo">
+          <section class="lado-esquerdo">
             <h2>Licoes aprendidas:</h2>
             <ol id="licoes_aprendidas">
               <li>Unix</li>
@@ -63,17 +63,19 @@
         <section class="artigos">
 
           <article id="article">
+            <h2>Sobre meu aprendizado!</h2>
             <p>Bom o que dizer? Desde que iniciei os estudos na Trybe, tive muitas experiências boas de aprendizado, como utilizar o terminal e o git de forma eficiente e organizada para realizar meus trabalhos seculares e também as atividades da Trybe, compartilhar o conhecimento adquirido com meus colegas de turma e aprender também com eles assim desenvolvendo minhas soft skills.</p>
           </article>
 
           <aside id="aside">
+            <h2>Sobre a passagem do meu aprendizado!</h2>
             <p>Realmente empolgante, antes de começar não tinha muito noção de como utilizar o git e nem o terminal, mas agora, em questão de criar e navegar eu sei praticamente tudo com apenas duas semanas de aprendizado! Tope tope tope...</p>
           </aside>
 
         </section>
       </section>
         <section id="table">
-          <table id="tabela">
+          <table>
             <tr>
               <td>Alguma coisa aqui dentro!</td>
               <td>Alguma coisa aqui!</td>
