corrgindo problemas de semantica

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <footer id="rodape">
         <h3>Todos os direitos reservados - <span>Diogenes Santos</span> | </h3>
         <nav class="redes-sociais">
-            <a href="https://www.linkedin.com/in/diogenessant/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/SantosDiv" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/diogenessant/" target="_blank"><em class="fab fa-linkedin"></em></a>
+            <a href="https://github.com/SantosDiv" target="_blank"><em class="fab fa-github"></em></a>
         </nav>
     </footer>
 </body>
