--- a/index.html
+++ b/index.html
@@ -48,6 +48,31 @@
         <li>lição 05</li>
     </ul>
    
+    <h3>tabela generica</h3>
+    <table>
+      <tr>
+        <th>dado 01</th>
+        <th>dado 02</th> 
+        <th>dado 03</th>
+      </tr>
+      <tr>
+        <td>dado 01</td>
+        <td>dado 01</td>
+        <td>dado 03</td>
+      </tr>
+      <tr>
+        <td>dado 01</td>
+        <td>dado 02</td>
+        <td>dado 03</td>
+      </tr>
+      <tr>
+        <td>dado 01</td>
+        <td> dado 02</td>
+        <td>dado 03</td>
+      </tr>
+    </table>
+  </section>
+    
    
     <footer id="rodapé">Todos os direitos reservados Jorge Ramires</footer>
 
