tentando arrumar bug q a tabela criou

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li>lição 04</li>
         <li>lição 05</li>
     </ul>
-   
+   <section>
     <h3>tabela generica</h3>
     <table>
       <tr>
