--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </section>
 
       <div id="section-table">
-        <table>
+        <table id="table">
           <caption id="caption-table">Estudos TRYBE</caption>
           <tr>
             <th>Bloco 1</th>
