tentando arrumar bug q a tabela criou

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     </nav>
     <img src="jorge.jpg" id="minha_foto" alt="Jorge Ramires"  width="400px">
+    <main> 
     <section>
     <article >
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in rutrum augue, quis interdum eros. Vivamus quis nisi eget lorem efficitur faucibus vel id nunc. Nam tempus mollis elit at condimentum. Aenean lobortis id dui vel vestibulum. Donec a posuere neque. Morbi eget molestie ante, elementum vestibulum sapien. Maecenas vitae dapibus urna, ullamcorper vulputate dolor. Etiam sit amet ligula orci. Vivamus ultrices risus dui, in tincidunt leo imperdiet at. Sed sed massa congue ante bibendum feugiat.
@@ -76,6 +77,6 @@
    
     <footer id="rodapé">Todos os direitos reservados Jorge Ramires</footer>
 
-    
+    </main>
 </body>
 </html>
