ajuste de lado a lado

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             
           </section>
 
-          <table>
+          <table class="fixacao">
             <tr>
               <th>Bloco</th>
               <th>Introducao</th>
