--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
   <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+      <nav id="nav">
+      <ul>
+          <li>Sobre mim</li>
+          <li> <p id="link"> Sigam-me no linkedin: <a href="https://www.linkedin.com/in/kamila-ribeiro-089778152/" target="_blank">Linkedin</a> </p> </li>
+          <li></li>
+          <li></li>
+          <li></li>
+      </ul>
+      </nav>
     </header>
 
   <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
@@ -51,7 +60,8 @@
     não ficamos com dúvidas.
 </aside>
 
-<nav id="nav"> Adicionem-me no Linkedin: <a href="https://www.linkedin.com/in/kamila-ribeiro-089778152/" target="_blank"></a></nav>
+
 <footer id="rodape">Sigam-me no GitHub: <a href="https://github.com/Kamilavrhcp" target="_blank">@Kamilavrhcp</a> </footer>
+
 </body>
 </html>
