--- a/index.html
+++ b/index.html
@@ -9,33 +9,34 @@
 <body>
   <header id="cabecalho">
       <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
-      <nav id="nav">
-      <ul>
-          <li>Sobre mim</li>
-          <li> <p id="link"> Sigam-me no linkedin: <a href="https://www.linkedin.com/in/kamila-ribeiro-089778152/" target="_blank">Linkedin</a> </p> </li>
-          <li></li>
-          <li></li>
-          <li></li>
-      </ul>
+    <nav id="nav">
+    <ul>
+        <li>Sobre mim</li>
+        <li> <p id="link"> Sigam-me no linkedin: <a href="https://www.linkedin.com/in/kamila-ribeiro-089778152/" target="_blank">Linkedin</a> </p> </li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
       </nav>
     </header>
 
-  <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
+    <section id="section">
+    <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
 
-  <ol id="licoes_aprendidas">
-  <li>Git;</li>
-  <li> github;</li>
-  <li>HTML;</li>
-  <li>HTML Semântico;</li>
-  <li>CSS.</li>
-  <li>Linux;</li>
-  <li>Linkedin;</li>
-  <li>Zoom;</li>
-  <li>Soft Skills;</li>
-  <li>Empatia.</li>
-</ol>
+    <ol id="licoes_aprendidas">
+    <li>Git;</li>
+    <li> github;</li>
+    <li>HTML;</li>
+    <li>HTML Semântico;</li>
+    <li>CSS.</li>
+    <li>Linux;</li>
+    <li>Linkedin;</li>
+    <li>Zoom;</li>
+    <li>Soft Skills;</li>
+    <li>Empatia.</li>
+    </ol>
 
-<ul id="licoes_a_aprender">
+    <ul id="licoes_a_aprender">
     <li>JavaScript;</li>
     <li>Lógica de Programação;</li>
     <li>Inglês Técnico</li>
@@ -46,20 +47,22 @@
     <li>Jogar melhor Amoung Us;</li>
     <li>Ser Fluente no italiano;</li>
     <li>Tocar Bateria;</li>
-</ul>
-<article id="artigo">
+    </ul>
+
+    <article id="artigo">
     <h2> Sobre o meu aprendizado na Trybe</h2>
     <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
-    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank, Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
+    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
     As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
-    desafios e superando-os com ajuda do time Trybe.</p>        
-</article>
+    desafios e superando-os com ajuda do time Trybe.</p>
+    </article>
 
-<aside>
+    <aside>
     O que mais me marcou como aprendizado são as softskils, as aulas ao vivo e os plantões, pois assim
     não ficamos com dúvidas.
-</aside>
+    </aside>
 
+    </section>
 
 <footer id="rodape">Sigam-me no GitHub: <a href="https://github.com/Kamilavrhcp" target="_blank">@Kamilavrhcp</a> </footer>
 
