New Commit Adjust v3

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       </section>
     </main>
   <footer>
-    <div id="foot"><a href=https://matheusjkl1.github.io target="_blank_a"><img src="image/gh.png" alt="github" id="gitlogo"></a>
-    <a href=https://www.linkedin.com/in/matheusmendes16/ target="_blank_a"><img src="image/lk.png" alt="linkedinlogo" id="linkedinlogo"></a>
+    <div id="foot"><a href=https://matheusjkl1.github.io target="_blank"><img src="image/gh.png" alt="github" id="gitlogo"></a>
+    <a href=https://www.linkedin.com/in/matheusmendes16/ target="_blank"><img src="image/lk.png" alt="linkedinlogo" id="linkedinlogo"></a>
     </div>
   </footer>
   </body>
