Colocando lado a lado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-    <section id="section">
+    <section id="section" class="lado_direito">
     <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
 
     <ol id="licoes_aprendidas">
@@ -49,7 +49,7 @@
     <li>Tocar Bateria;</li>
     </ul>
 
-    <article id="artigo">
+    <article id="artigo" class="lado-esquerdo">
     <h2> Sobre o meu aprendizado na Trybe</h2>
     <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
     minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
