--- a/index.html
+++ b/index.html
@@ -1,87 +1,76 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <title> Projeto Trybe</title>
-  <link rel="stylesheet" href="style.css"/>
-</head>
-
-<body>
-
-  <header id="cabecalho">
-    <h1 id="titulo">Meus códigos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
-
-    <nav >
-      <ul><li><a href="https://github.com/otacisos" target="_blank"> Github</a></li> </ul>
-    </nav>
-  </header>
-
-  <img id="minha_foto" src="miau.jpg">
-
-  <table id="tabela">
-    <tr>
+  <head>
+    <meta charset="UTF-8">
+    <title> Projeto Trybe</title>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
+    <header id="cabecalho">
+      <h1 id="titulo">Meus códigos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
+      <nav >
+        <ul>
+        <li><a href="https://github.com/otacisos" target="_blank"> Github</a></li>
+        </ul>
+      </nav>
+    </header>
+    <img id="minha_foto" src="miau.jpg">
+    <table id="tabela">
+      <tr>
       <th>Nome:</th>
       <td>Otaciso</td>
-    </tr>
-    <tr>
+      </tr>
+      <tr>
       <th>Idade:</th>
       <td>15 a.c</td>
-    </tr>
-  </table>
-
+      </tr>
+    </table>
     <article>
       <p>
-          Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
+        Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
         Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
         sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura, pois a
         proporção do sangue não pode ser maior que um para um milhão. Entretanto, não tenho dúvida
         de que obteremos a reação característica.
-
       </p>
     </article>
-
     <aside>
       <p>
         Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
-      Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
-      sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
+        Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
+        sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
       </p>
     </aside>
-
     <section>
-        <ol id="licoes_aprendidas">
-          <div class="artigo">
-            <li>Aparou</li>
-            <li>numa</li>
-            <li>pipeta</li>
-            <li>gota</li>
-            <li>sangue</li>
-            <li>saiu</li>
-            <li>Agora</li>
-            <li>adiciono</li>
-            <li>esta</li>
-            <li>pequena</li>
-          </div>
-        </ol>
-
-    <ul id="licoes_a_aprender">
-      <div class="passagem">
-        <li>quantidade</li>
-        <li>sangue</li>
-        <li>litro</li>
-        <li>água</li>
-        <li>Perceberá</li>
-        <li>mistura</li>
-        <li>aparência</li>
-        <li>água</li>
-        <li>pura</li>
-        <li>pois</li>
+      <ol id="licoes_aprendidas">
+      <div class="artigo">
+      <li>Aparou</li>
+      <li>numa</li>
+      <li>pipeta</li>
+      <li>gota</li>
+      <li>sangue</li>
+      <li>saiu</li>
+      <li>Agora</li>
+      <li>adiciono</li>
+      <li>esta</li>
+      <li>pequena</li>
       </div>
-    </ul>
-  </section>
-
-  <footer id="rodape">Rodapé</footer>
-
-</body>
-
+      </ol>
+      <ul id="licoes_a_aprender">
+      <div class="passagem">
+      <li>quantidade</li>
+      <li>sangue</li>
+      <li>litro</li>
+      <li>água</li>
+      <li>Perceberá</li>
+      <li>mistura</li>
+      <li>aparência</li>
+      <li>água</li>
+      <li>pura</li>
+      <li>pois</li>
+      </div>
+      </ul>
+    </section>
+    <footer id="rodape">Rodapé</footer>
+  </body>
 </html>
