--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <li>Soft Skills;</li>
     <li>Empatia.</li>
     </ol>
+    </section>
 
-    <ul id="licoes_a_aprender">
+    <article>
+    <ul id="licoes_a_aprender" class="lado-esquerdo">
     <li>JavaScript;</li>
     <li>Lógica de Programação;</li>
     <li>Inglês Técnico</li>
@@ -48,8 +50,9 @@
     <li>Ser Fluente no italiano;</li>
     <li>Tocar Bateria;</li>
     </ul>
+  </article>
 
-    <article id="artigo" class="lado-esquerdo">
+    <article id="artigo">
     <h2> Sobre o meu aprendizado na Trybe</h2>
     <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
     minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
@@ -57,6 +60,7 @@
     desafios e superando-os com ajuda do time Trybe.</p>
     </article>
 
+    <section>
     <aside>
     O que mais me marcou como aprendizado são as softskils, as aulas ao vivo e os plantões, pois assim
     não ficamos com dúvidas.
