--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     <li>Soft Skills;</li>
     <li>Empatia.</li>
     </ol>
-    </section>
-
-    <article>
-    <ul id="licoes_a_aprender" class="lado-esquerdo">
+    
+    <ul id="licoes_a_aprender">
     <li>JavaScript;</li>
     <li>Lógica de Programação;</li>
     <li>Inglês Técnico</li>
@@ -50,9 +48,8 @@
     <li>Ser Fluente no italiano;</li>
     <li>Tocar Bateria;</li>
     </ul>
-  </article>
 
-    <article id="artigo">
+    <article id="artigo" class="lado-esquerdo">
     <h2> Sobre o meu aprendizado na Trybe</h2>
     <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
     minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
@@ -60,7 +57,6 @@
     desafios e superando-os com ajuda do time Trybe.</p>
     </article>
 
-    <section>
     <aside>
     O que mais me marcou como aprendizado são as softskils, as aulas ao vivo e os plantões, pois assim
     não ficamos com dúvidas.
