header finalizado + requisito 7

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">[F]elipe Rodrigues Pimentel</h1>
+            <nav id="navigation">
+                <ul id="menu">
+                    <li><a class="active" href="">PERFIL</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=vDDkrrGMZfc" target="_blank">LINK</a></li>
+                </ul>
+            </nav>
         </header>
     </body>
 
