Ajustes no hover

--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
     </section>
 
     <section id="contato">
-        <h3><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=35
-        px></a>      <a href="https://github.com/analuizams" target="_blank"><img src="github.png" alt="Logo do GitHub" width=35px></a></h3>
+        <h3 id="linkedin"><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=35
+        px></a>      
+        <h3 id="github"><a href="https://github.com/analuizams" target="_blank"><img src="github.png" alt="Logo do GitHub" width=35px></a></h3>
+        </h3>
     </section>
 </main>
 
