--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-    <div id='container'>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned</h1>
         <nav>
@@ -20,15 +19,15 @@
             </ul>
         </nav>
     </header>
+    <img id="minha_foto" src="minhafoto.jpg" alt= "foto de perfil">
     <article id="lado-esquerdo"> 
         <h2> Meu Aprendizado</h2>
-        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo se completam de forma natural criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade mas são organizados de forma que uma boa leitura do que se pede nos permite fazer uma abstração e realizá-los sem grandes impecilhos. Apesar de eu já possuir um background em tecnologia sinto que desta vez que meu aprendizado realmente está em expansão e estou ancioso <i>(positivamente)</i> para aprender mais!</p>
+        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo se completam de forma natural criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade mas são organizados de forma que uma boa leitura do que se pede nos permite fazer uma abstração e realizá-los sem grandes impecilhos. Apesar de eu já possuir um background em tecnologia sinto que desta vez que meu aprendizado realmente está em expansão e estou ansioso <strong>(positivamente)</strong> para aprender mais!</p>
     </article>
     <aside id="lado-direito">
         <h2>Github</h2>
         <p>Uma ferramenta que em primeiro momento me assustou um pouco, mas essencial para a vida de qualquer desenvolvedor. Depois que aprendemos suas funções básicas, fica bem mais fácil manipular sem medo de errar</p>
     </aside>
-    </div>
     <section>
         <div id="barralicoes">  
         <h2>Lições Aprendidas</h2>
@@ -85,7 +84,6 @@
              </tr>
         </table>
     </section>
-    <img id="minha_foto" src="minhafoto.jpg" alt= "foto de perfil">
     <footer id="rodape">
         <p>Projeto integrante do curso de Desenvolvimento Web da Trybe, iniciado em NOV/20 - Turma 09.
             <a target="_blank" href="https://github.com/fcbresende">Minha Página github</a></p>
