--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,61 +8,73 @@
 </head>
 <body>
   <header id="cabecalho">
-      <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+    <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
     <nav id="nav">
-    <ul>
+      <ul>
         <li>Sobre mim</li>
-        <li> <p id="link"> Sigam-me no linkedin: <a href="https://www.linkedin.com/in/kamila-ribeiro-089778152/" target="_blank">Linkedin</a> </p> </li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-      </nav>
-    </header>
+        <li><p id="link"> Sigam-me no linkedin:<a href="https://www.linkedin.com/in/kamila-ribeiro-089778152/" target="_blank">Linkedin</a></p></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section id="section">
+  <main>
     <img  id="minha_foto" src="https://avatars1.githubusercontent.com/u/68447692?s=60&v=4" alt="foto kamila github">
-
     <ol id="licoes_aprendidas">
-    <li>Git;</li>
-    <li> github;</li>
-    <li>HTML;</li>
-    <li>HTML Semântico;</li>
-    <li>CSS.</li>
-    <li>Linux;</li>
-    <li>Linkedin;</li>
-    <li>Zoom;</li>
-    <li>Soft Skills;</li>
-    <li>Empatia.</li>
+      <li>Git;</li>
+      <li> github;</li>
+      <li>HTML;</li>
+      <li>HTML Semântico;</li>
+      <li>CSS.</li>
+      <li>Linux;</li>
+      <li>Linkedin;</li>
+      <li>Zoom;</li>
+      <li>Soft Skills;</li>
+      <li>Empatia.</li>
     </ol>
-    
     <ul id="licoes_a_aprender">
-    <li>JavaScript;</li>
-    <li>Lógica de Programação;</li>
-    <li>Inglês Técnico</li>
-    <li>Back-end;</li>
-    <li>Front-end;</li>
-    <li>Python;</li>
-    <li>Ciencias Da Computação;</li>
-    <li>Jogar melhor Amoung Us;</li>
-    <li>Ser Fluente no italiano;</li>
-    <li>Tocar Bateria;</li>
+      <li>JavaScript;</li>
+      <li>Lógica de Programação;</li>
+      <li>Inglês Técnico</li>
+      <li>Back-end;</li>
+      <li>Front-end;</li>
+      <li>Python;</li>
+      <li>Ciencias Da Computação;</li>
+      <li>Jogar melhor Amoung Us;</li>
+      <li>Ser Fluente no italiano;</li>
+      <li>Tocar Bateria;</li>
     </ul>
-
-    <article id="artigo">
-    <h2> Sobre o meu aprendizado na Trybe</h2>
-    <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
-    minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
-    As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
-    desafios e superando-os com ajuda do time Trybe.</p>
+    <article id="artigo" class="lado-esquerdo">
+      <h2> Sobre o meu aprendizado na Trybe</h2>
+      <p> Ao passar pelo desafio do processo seletivo, que também foi um grande aprendizado, já percebi a
+      minha evolução. No curso introdutório o introdutório de JavaScript, usar algumas ferramentas como hackerRank Zoom e melhorei a minha comunicação através de entrevistas que é uma fase do processo seletivo da Trybe.
+      As aulas iniciaram em Novembro, desde então o meu aprendizado está sendo bastante intenso, reconhecendo
+      desafios e superando-os com ajuda do time Trybe.</p>
     </article>
-
-    <aside>
-    O que mais me marcou como aprendizado são as softskils, as aulas ao vivo e os plantões, pois assim
-    não ficamos com dúvidas.
+    <aside class="lado-direito">
+      <section>
+      O que mais me marcou como aprendizado são as softskils, as aulas ao vivo e os plantões, pois assim
+      não ficamos com dúvidas.
+      </section>
     </aside>
-
-    </section>
+    <table>
+      <tr>
+        <th>
+          Testando
+        </th>
+        <th>
+          Resultado
+        </th>        
+      </tr>
+      <tr>
+        <td>
+          Dados
+        </td>
+        <td>
+          coluna resultado
+        </td>
+      </tr>
+    </table>
+</main>
 
 <footer id="rodape">Sigam-me no GitHub: <a href="https://github.com/Kamilavrhcp" target="_blank">@Kamilavrhcp</a> </footer>
 
