--- a/index.html
+++ b/index.html
@@ -56,22 +56,20 @@
              <td>Coisa a mais</td>
              <td>Coisa a menos</td>
          </tr>
-
      </table>
-     <article>
+     <article id ="jornada">
         <h3>Artigo sobre o aprendizado</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque </p>
-      <aside id="artigo" >
-        <h3>Passagem sobre aprendizado</h3>
+    </article>
+    <aside id="artigo" >
+    <h3>Passagem sobre aprendizado</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
         </p>
-    </article>
-      </aside>
+    </aside>
     <a href="https://www.linkedin.com/in/fredericocanoeira/" target="_blank">Linkedin</a>
     <a href="https://github.com/" target="_blank">GitHub</a>
 </main>
     <footer id="rodape">
-    </footer>
     <p>Todos os direitos reservados, Frederico</p>
 </footer>
 </body>
