Adicionando cor ao body, um cabeçalho e uma foto minha.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
     <title>Project lessons learned</title>
-  </head>
-  <body>
-    <header>
+</head>
 
+<body>
+    <header id="cabecalho">
+        <h1 id="titulo">O que aprendi na Trybe em 2 semanas!</h1>
     </header>
-    
-  </body>
+
+    <section>
+        <img src="./images/MinhaFoto.jpg">
+    </section>
+
+
+
+</body>
+
 </html>
