Adicionando cor ao body, um cabeçalho e uma foto minha.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <section>
-        <img src="./images/MinhaFoto.jpg">
+        <img id="minha_foto" src="./images/MinhaFoto.jpg">
     </section>
 
 
