Adicionando ao index.html uma lista ordenada de coisas que aprendi na Trybe

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
         <img id="minha_foto" src="./images/MinhaFoto.jpg">
     </section>
 
+    <section>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Shell</li>
+            <li>Como começar a construir um linkedin profissional</li>
+            <li>Como que a internet funciona</li>
+            <li>Versionamento com o GIT</li>
+            <li>Fazer pull, push num repositório remoto no GitHUb</li>
+            <li>Iniciar uma criação de portfólio</li>
+            <li>Boas práticas no trabalho em equipe com o GIT</li>
+            <li>Html</li>
+            <li>CSS</li>   
+        </ol>
+    </section>
 
 
 </body>
