requisitos 6 e 7, com o alinhamento dos items requisitados em 2, 3, 4 e 5

--- a/index.html
+++ b/index.html
@@ -3,38 +3,51 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title></title>
+        <title>Estudante de desenvolvimento de Software</title>
         <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <header id="cabecalho">
             <h1 id="titulo">João Pedro Barros</h1>
+            <nav id="barra_atalhos">
+                <div class="atalhos">Home</div>
+                <div class="atalhos">Sobre</div>
+                <div class="atalhos">Contato</div>
+            </nav>
         </header>
         <img src="/images/WhatsApp Image 2020-11-10 at 14.10.49.jpeg" alt="Foto de João Pedro Barros sorrindo" id="minha_foto">
-        <ol id="licoes_aprendidas">
-            <li>Unix</li>
-            <li>Git</li>
-            <li>GitHub</li>
-            <li>Auto Controle</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Inspect</li>
-            <li>Semantic HTML</li>
-        </ol>
-        <ul id="licoes_a_aprender">
-            <li>Javascript</li>
-            <li>DOM</li>
-            <li>Forms</li>
-            <li>CSS Responsive</li>
-            <li>ES6</li>
-            <li>HOF</li>
-            <li>Unit Tests</li>
-            <li>React</li>
-            <li>Node</li>
-            <li>SQL</li>
-        </ul>
-        <footer id="rodape"></footer>
+        <div id="lista_licoes">
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Auto Controle</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>Javascript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </div>
+        <article></article>
+        <aside></aside>
+        <footer id="rodape">
+            <a href="https://github.com/JoaoPBarros">
+                <img id="git_site"src="/images/Github-PNG-Image.png" alt="Link para o GitHub de João Pedro Barros">
+            </a>
+        </footer>
     </body>
 </html>
