Adicionando ao index.html uma lista ordenada de coisas que quero aprender na Trybe

--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
         </ol>
     </section>
 
+    <section>
+        <ul id="licoes_a_aprender">
+            <li>Java Script</li>
+            <li>Banco de dados</li>
+            <li>Como ter uma comunicação acertiva e profissional</li>
+            <li>Melhores práticas no mercado</li>
+            <li>O processo de criação de uma aplicação</li>
+            <li>Como me portar diante de situações corriqueiras no dia de uma pessoa programadora</li>
+            <li>React</li>
+            <li>Aprender a aprender</li>
+            <li>Como criar um network de sucesso</li>
+            <li>Soft Skils para esse mercado</li>   
+        </ul>
+    </section>
+
 
 </body>
 
