Adicionando rodapé com contato

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>Iniciar uma criação de portfólio</li>
             <li>Boas práticas no trabalho em equipe com o GIT</li>
             <li>Html</li>
-            <li>CSS</li>   
+            <li>CSS</li>
         </ol>
     </section>
 
@@ -43,11 +43,18 @@
             <li>React</li>
             <li>Aprender a aprender</li>
             <li>Como criar um network de sucesso</li>
-            <li>Soft Skils para esse mercado</li>   
+            <li>Soft Skils para esse mercado</li>
         </ul>
     </section>
 
-
+    <footer id="rodape">
+        <h4>Contato</h4>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/emanoel-leao/">Linkedin</a></li>
+            <li><a href="https://github.com/EmanoelCristhian">GitHub</a></li>
+            <li>Ou me manda um e-mail:<a href="mailto:emanuelleaomarinho@gmail.com">emanuelleaomarinho@gmail.com</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
