--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/illuminati.png" >
     <title>Project lessons learned</title>
 </head>
 
